--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Klipper calculator</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #1E1E1E; color: #E0E0E0}
-        select, input, button { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px}
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #1E1E1E; color: #E0E0E0;}
+        select, input { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 85%}
+        button { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 25%}
         hr {
               width: 100%;
               height: 2px;
@@ -15,8 +16,9 @@
               margin: 30px 0;
           }
         .container { max-width: 400px; margin: auto; }
+        .button-container {display: flex; justify-content: center; align-items: center;width: 100%;}
         .welcome h1 {display: inline-block; border-bottom: 3px solid red; margin-bottom: 2px}
-        .steps-per-mm-to-rotation-distance {display: flex; flex-direction: column; gap: 10px} h2 {text-align: left}
+        .steps-per-mm-to-rotation-distance {display: flex; flex-direction: column; gap: 10px; align-items: center} h2 {text-align: left}
     </style>
 </head>
 <body>
@@ -50,7 +52,9 @@
         <label for="steps_per_mm">Steps per mm:</label>
         <input type="number" id="steps_per_mm" placeholder="Enter steps/mm">
         
-        <button onclick="calculateRotationDistance()">Calculate</button>
+        <div class="button-container">
+          <button onclick="calculateRotationDistance()">Calculate</button>
+        </div>
         
         <h3>Rotation Distance: <span id="result">--</span> mm</h3>
     </div>
