--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #1E1E1E; color: #E0E0E0;}
         select, input { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 85%}
-        button { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 25%}
+        button { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 25%; cursor: pointer;}
         hr {
               width: 100%;
               height: 2px;
