--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
     <div class="section" id="firmwares">
       <h2>Firmwares</h2>
       <div class="version">
-          <span><a href="https://www.klipper3d.org/" target="_blank" style="text-decoration: none; color: inherit;">Klipper:</a></span>
+          <span><a href="https://www.klipper3d.org/" target="_blank" style="text-decoration: none; color: inherit;">Klipper</a></span>
           <a href="https://github.com/Klipper3d/klipper/tags", id="klipper-version">Loading...</a>
       </div>
       <div class="version">
-          <span><a href="https://marlinfw.org/" target="_blank" style="text-decoration: none; color: inherit;">Marlin:</a></span>
+          <span><a href="https://marlinfw.org/" target="_blank" style="text-decoration: none; color: inherit;">Marlin</a></span>
           <a href="https://github.com/MarlinFirmware/Marlin/releases", id="marlin-version">Loading...</a>
       </div>
   </div>
@@ -155,19 +155,19 @@
   <div class="section" id="web-interfaces">
       <h2>Web Interfaces</h2>
       <div class="version">
-          <span><a href="https://moonraker.readthedocs.io/en/latest/" target="_blank" style="text-decoration: none; color: inherit;">Moonraker:</a></span>
+          <span><a href="https://moonraker.readthedocs.io/en/latest/" target="_blank" style="text-decoration: none; color: inherit;">Moonraker</a></span>
           <a href="https://github.com/Arksine/moonraker/tags", id="moonraker-version">Loading...</a>
       </div>
       <div class="version">
-          <span><a href="https://docs.mainsail.xyz/" target="_blank" style="text-decoration: none; color: inherit;">Mainsail:</a></span> 
+          <span><a href="https://docs.mainsail.xyz/" target="_blank" style="text-decoration: none; color: inherit;">Mainsail</a></span> 
           <a href="https://github.com/mainsail-crew/mainsail/releases", id="mainsail-version">Loading...</a>
       </div>
       <div class="version">
-          <span><a href="https://docs.fluidd.xyz/", target="_blank" style="text-decoration: none; color: inherit;">Fluidd:</a></span> 
+          <span><a href="https://docs.fluidd.xyz/", target="_blank" style="text-decoration: none; color: inherit;">Fluidd</a></span> 
           <a href="https://github.com/fluidd-core/fluidd/releases", id="fluidd-version">Loading...</a>
       </div>
       <div class="version">
-          <span><a href="https://octoprint.org/", target="_blank" style="text-decoration: none; color: inherit;">OctoPrint:</a></span> 
+          <span><a href="https://octoprint.org/", target="_blank" style="text-decoration: none; color: inherit;">OctoPrint</a></span> 
           <a href="https://github.com/OctoPrint/OctoPrint/releases", id="octoprint-version">Loading...</a>
       </div>
   </div>
@@ -175,11 +175,11 @@
   <div class="section" id="slicers">
       <h2>Slicers</h2>
       <div class="version">
-          <span><a href="https://github.com/SoftFever/OrcaSlicer" target="_blank" style="text-decoration: none; color: inherit;">OrcaSlicer:</a></span>
+          <span><a href="https://github.com/SoftFever/OrcaSlicer" target="_blank" style="text-decoration: none; color: inherit;">OrcaSlicer</a></span>
           <a href="https://github.com/SoftFever/OrcaSlicer/releases", id="orca-version">Loading...</a>
       </div>
       <div class="version">
-          <span><a href="https://www.prusa3d.com/page/prusaslicer_424/" target="_blank" style="text-decoration: none; color: inherit;">PrusaSlicer:</a></span>
+          <span><a href="https://www.prusa3d.com/page/prusaslicer_424/" target="_blank" style="text-decoration: none; color: inherit;">PrusaSlicer</a></span>
           <a href="https://github.com/prusa3d/PrusaSlicer/releases", id="prusa-version">Loading...</a>
       </div>
   </div>
@@ -198,13 +198,13 @@
     <div class="calc">
         <h2>Firmware</h2>
         <button class="calculator-button" onclick="location.href='klipper-calculator.html'">Klipper</button>
-        <button class="calculator-button" onclick="location.href='marlin-calculator.html'">Marin</button>
+        <button class="calculator-button" onclick="location.href='marlin-calculator.html'">Marlin</button>
     </div>
 
     <div class="calc">
         <h2>Slicer</h2>
-        <button class="calculator-button" onclick="location.href='orcaslicer-calculator.html'">Orca Slicer</button>
-        <button class="calculator-button" onclick="location.href='prusaslicer-calculator.html'">Prusa Slicer</button>
+        <button class="calculator-button" onclick="location.href='orcaslicer-calculator.html'">OrcaSlicer</button>
+        <button class="calculator-button" onclick="location.href='prusaslicer-calculator.html'">PrusaSlicer</button>
     </div>
 
     <div class="calc">
