--- a/klipper-calculator.html
+++ b/klipper-calculator.html
@@ -7,7 +7,25 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background-color: #1E1E1E; color: #E0E0E0;}
         select, input { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 85%}
-        button { margin: 10px; padding: 10px; font-size: 16px; border-radius: 5px; width: 25%; cursor: pointer;}
+        button { 
+            margin: 10px; 
+            padding: 12px 20px; 
+            font-size: 16px; 
+            border-radius: 30px; 
+            width: 30%; 
+            cursor: pointer; 
+            background: linear-gradient(to right, #4CAF50, #45a049);
+            color: white; 
+            border: none; 
+            transition: transform 0.3s ease, box-shadow 0.2s ease;
+        }
+        button:hover {
+            transform: scale(1.05);
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+        }
+        button:active {
+            transform: scale(0.98);
+        }
         hr {
               width: 100%;
               height: 2px;
@@ -31,7 +49,7 @@
     <div class="steps-per-mm-to-rotation-distance">
         <h2>Steps per mm to rotation distance:</h2>
         
-        <label for="microstepping">Microsteps:</label>
+        <label for="microstepping">Select Microsteps:</label>
         <select id="microstepping">
             <option value="1">1/1</option>
             <option value="2">1/2</option>
@@ -44,7 +62,7 @@
             <option value="256">1/256</option>
         </select>
         
-        <label for="fullsteps">Full Steps per Rotation:</label>
+        <label for="fullsteps">Select Full Steps per Rotation:</label>
         <select id="fullsteps">
             <option value="200" selected>200 - 1.8°</option>
             <option value="400">400 - 0.9°</option>
