--- a/index.html
+++ b/index.html
@@ -194,6 +194,15 @@
     <h2>Calculators</h2> 
   </div>
   <div class="main-container">
+    <div class="calc">
+        <h2>mm/s ⇄ mm/min</h2>
+
+        <label>Speed in mm/s:</label>
+        <input type="number" id="mm_s" oninput="convertMM(this.value, 'mm_s')">
+        <br><br>
+        <label>Speed in mm/min:</label>
+        <input type="number" id="mm_min" oninput="convertMM(this.value, 'mm_min')">
+    </div>
         
     <div class="calc">
         <h2>Firmware</h2>
@@ -251,6 +260,14 @@
         fetchLatestVersion("SoftFever/OrcaSlicer", "orca-version");
         fetchLatestVersion("prusa3d/PrusaSlicer", "prusa-version");
         fetchLatestVersion("OctoPrint/OctoPrint", "octoprint-version");
+
+        function convertMM(value, unit) {
+            if (unit === 'mm_s') {
+                document.getElementById('mm_min').value = (value * 60).toFixed(2);
+            } else {
+                document.getElementById('mm_s').value = (value / 60).toFixed(2);
+            }
+        }
     </script>
 </body>
 </html>
