--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D</title>
+    <title>3D Helper</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -130,7 +130,7 @@
 </head>
 <body>
     <div class="welcome">
-      <h1>Welcome to 3D printing calculator</h1>
+      <h1>Welcome to 3D printing helper</h1>
       <h4>This site includes some useful calculators for firmware and slicers, so you don't need to calculate everything manually</h4>
     </div>
 
@@ -213,7 +213,7 @@
     <div class="calc">
         <h2>Slicer</h2>
         <button class="calculator-button" onclick="location.href='orcaslicer-calculator.html'">OrcaSlicer</button>
-        <button class="calculator-button" onclick="location.href='prusaslicer-calculator.html'">PrusaSlicer</button>
+        <button class="calculator-button" onclick="location.href='prusaslicer-calculator.html'" disabled>PrusaSlicer</button>
     </div>
 
     <div class="calc">
