--- a/klipper-calculator.html
+++ b/klipper-calculator.html
@@ -109,7 +109,7 @@
     <hr>
 
     <div class="lead-screw-rotation-distance">
-        <h2>Lead screw to Z rotation distance</h2>
+        <h2>Z rotation distance</h2>
 
         <label for="leadscrew">Select Leadscrew:</label>
         <select id="leadscrew" onchange="showLeadScrewvalue()">
