--- a/orcaslicer-calculator.html
+++ b/orcaslicer-calculator.html
@@ -44,7 +44,7 @@
 <body>
     <div class="welcome">
       <h1>Welcome to OrcaSlicer Calculator</h1>
-      <h4>This site includes some useful calculators for orcaslicer calibrations</h4>
+      <h4>This site includes some useful calculators for OrcaSlicer calibrations</h4>
     </div>
 
     <hr>
