--- a/klipper-PID-fix.html
+++ b/klipper-PID-fix.html
@@ -640,7 +640,7 @@ print(f"Results written to {results_file}")
         <h2>Sources:</h2>
     </div>
 
-    <h4 class="align-left" href="https://klipper.discourse.group/t/pid-tuning-its-broken-but-how-is-best-to-fix-it/2579/7">https://klipper.discourse.group/t/pid-tuning-its-broken-but-how-is-best-to-fix-it/2579/7</h4>
+    <a class="align-left" href="https://klipper.discourse.group/t/pid-tuning-its-broken-but-how-is-best-to-fix-it/2579/7">https://klipper.discourse.group/t/pid-tuning-its-broken-but-how-is-best-to-fix-it/2579/7</a>
 
     
     <script>
