--- a/klipper-PID-fix.html
+++ b/klipper-PID-fix.html
@@ -631,7 +631,7 @@ print(f"Results written to {results_file}")
 
     <h4 class="align-left">In new created directory <code>/PID</code> you should find either <code>results_heater_bed.txt</code> or <code>results_extruder.txt</code>.</h4>
     <h4 class="align-left">In these .txt files you will find many PID tuning results, try them and find the best working just for you. Recommended parameters are in <code>SELF-CALCULATED VALUES:</code> section.</h4>
-    <h4 class="align-left">For example I have 24V system with Prusa MK52 heated bed and the best parameters were in <code>SELF-CALCULATED VALUES: > Classic Ziegler-Nichols PID parameters:</code> section.</h4>
+    <h4 class="align-left">For example I have 24V system with Prusa MK52 heated bed and the best parameters were in <code>SELF-CALCULATED VALUES: > Tune PID Delta=2.5: > Classic Ziegler-Nichols PID parameters:</code> section.</h4>
     <h4 class="align-left">Or you can copy the whole file to the ChatGPT, tell it your system specifications and ask it to find the best one for you 😊</h4>
 
     <hr>
