--- a/klipper-PID-fix.html
+++ b/klipper-PID-fix.html
@@ -164,6 +164,7 @@
         <button onclick="toggleCode()">📂 Show Code</button>
         <div class="code-content" id="code-block">
             <pre id="code-snippet">
+#This script was made by RK3 => https://klipper.discourse.group/u/RK3/summary
 import time
 import shutil
 from pathlib import Path
