--- a/orcaslicer-calculator.html
+++ b/orcaslicer-calculator.html
@@ -26,6 +26,25 @@
         button:active {
             transform: scale(0.98);
         }
+        .home-button {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            padding: 12px 18px;
+            border-radius: 10px;
+            text-decoration: none;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background 0.3s ease, transform 0.3s ease;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        .home-button:hover {
+            background: rgba(255, 255, 255, 0.2);
+            transform: translateY(-3px);
+        }
         hr {
               width: 100%;
               height: 2px;
@@ -42,6 +61,7 @@
     </style>
 </head>
 <body>
+    <a class="home-button" onclick="location.href='orcaslicer-calculator.html'">Home</a>
     <div class="welcome">
       <h1>Welcome to OrcaSlicer Calculator</h1>
       <h4>This site includes some useful calculators for OrcaSlicer calibrations</h4>
