Fix home button

--- a/marlin-calculator.html
+++ b/marlin-calculator.html
@@ -74,7 +74,7 @@
     </style>
 </head>
 <body>
-    <a class="home-button" onclick="location.href='orcaslicer-calculator.html'">Home</a>
+    <a class="home-button" onclick="location.href='index.html'">Home</a>
     <div class="welcome">
       <h1>Welcome to MARLIN Calculator</h1>
       <h4>This site includes some useful calculators for Marlin firmware</h4>
