--- a/klipper-PID-fix.html
+++ b/klipper-PID-fix.html
@@ -144,7 +144,7 @@
     </style>
 </head>
 <body>
-    <a class="home-button" onclick="location.href='orcaslicer-calculator.html'">Home</a>
+    <a class="home-button" onclick="location.href='index.html'">Home</a>
     <div class="welcome">
       <h1>Welcome to KLIPPER PID tuning fix</h1>
       <h4>Klipper doesn't really have good working PID tuning. This script which generates PID values by several methods should help you to get almost perfect PID tuning. Big shoutout to <a href="https://klipper.discourse.group/u/RK3/summary">RK3</a> from Klipper forum, who made this script.</h4>
