--- a/klipper-calculator.html
+++ b/klipper-calculator.html
@@ -60,7 +60,7 @@
     </style>
 </head>
 <body>
-    <a class="home-button" onclick="location.href='orcaslicer-calculator.html'">Home</a>
+    <a class="home-button" onclick="location.href='index.html'">Home</a>
     <div class="welcome">
       <h1>Welcome to KLIPPER Calculator</h1>
       <h4>This site includes some useful calculators for Klipper firmware</h4>
