--- a/orcaslicer-calculator.html
+++ b/orcaslicer-calculator.html
@@ -61,7 +61,7 @@
     </style>
 </head>
 <body>
-    <a class="home-button" onclick="location.href='orcaslicer-calculator.html'">Home</a>
+    <a class="home-button" onclick="location.href='index.html'">Home</a>
     <div class="welcome">
       <h1>Welcome to OrcaSlicer Calculator</h1>
       <h4>This site includes some useful calculators for OrcaSlicer calibrations</h4>
