--- a/marlin-calculator.html
+++ b/marlin-calculator.html
@@ -223,13 +223,13 @@
                 <label for="best-height_X">X axis frequency:</label>
                 <input type="text" id="X_HZ" readonly placeholder="X axis frequency">
                 <label for="best-height_X">GCode command to apply the input shaping results for X axis:</label>
-                <input type="text" id="X_GCODE" readonly placeholder="GCode command">
+                <input type="text" id="X_GCODE" readonly placeholder="GCode command X axis">
             </div>
             <div class="column">
                 <label for="best-height_Y">Y axis frequency:</label>
                 <input type="text" id="Y_HZ" readonly placeholder="Y axis frequency">
                 <label for="best-height_Y">GCode command to apply the input shaping results for Y axis:</label>
-                <input type="text" id="Y_GCODE" readonly placeholder="GCode command">
+                <input type="text" id="Y_GCODE" readonly placeholder="GCode command Y axis">
             </div>
         </div>
 
